Some files added.

--- a/weather_index.html
+++ b/weather_index.html
@@ -1,11 +1,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="quotejs.js"></script>
-<link rel="stylesheet" type="text/css" href="quotecss.css">
+<script src="weather_js.js"></script>
+<link rel="stylesheet" type="text/css" href="weather-icons.min.css">
+<link rel="stylesheet" type="text/css" href="weather_style.css">
 <body>
 <div id="weatherappspot">
 <div id="belsoapp">
 <h2 id="city"></h2>
 C:<span id="temp"></span><br>
+<i class="wi wi-day-sunny"></i>
 Wind Speed:<span id="windSpeed"></span><br>
 Wind Degree:<span id="windDegree"></span><br>
 Clouds: <span id="clouds"></span><br>
