some more files added for icons

--- a/weather_index.html
+++ b/weather_index.html
@@ -1,5 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="weather_js.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="weather-icons.min.css">
 <link rel="stylesheet" type="text/css" href="weather_style.css">
 <body>
 <div id="weatherappspot">
@@ -10,7 +12,7 @@ C:<span id="temp"></span><br>
 Wind Speed:<span id="windSpeed"></span><br>
 Wind Degree:<span id="windDegree"></span><br>
 Clouds: <span id="clouds"></span><br>
-<span><button id="submit">Submit</button></span>
+<span><button id="submit" class="btn btn-warning btn-default">Submit</button></span>
 
 </div>
 </div>
