--- a/weather_index.html
+++ b/weather_index.html
@@ -2,18 +2,17 @@
 <script src="weather_js.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="weather-icons.min.css">
+<link rel="stylesheet" type="text/css" href="weather-icons-wind.min.css">
 <link rel="stylesheet" type="text/css" href="weather_style.css">
 <body>
 <div id="weatherappspot">
 <div id="belsoapp">
 <h2 id="city"></h2>
 C:<span id="temp"></span><br>
-<i class="wi wi-day-sunny"></i>
-Wind Speed:<span id="windSpeed"></span><br>
-Wind Degree:<span id="windDegree"></span><br>
+<span id="windSpeedSpan"></span>Wind Speed:<span id="windSpeed"></span><br>
+<span id="windDegreeSpan"></span>Wind Degree:<span id="windDegree"></span><br>
 Clouds: <span id="clouds"></span><br>
 <span><button id="submit" class="btn btn-warning btn-default">Submit</button></span>
-
 </div>
 </div>
 </body>
