Added some more basic icons

--- a/weather_index.html
+++ b/weather_index.html
@@ -10,10 +10,10 @@
 <div id="belsoapp" class="row">
 <h2 id="city"></h2>
 <div id="left">
- C : <span id="temp"></span><br>
+<span><i class="wi wi-thermometer"></i></span> C : <span id="temp"></span><br>
 <span id="windSpeedSpan"></span> Wind Speed : <span id="windSpeed"></span><br>
 <span id="windDegreeSpan"></span> Wind Degree : <span id="windDegree"></span><br>
- Clouds : <span id="clouds"></span><br>
+<span><i class="wi wi-day-cloudy"></i></span> Clouds : <span id="clouds"></span><br>
  </div>
  <div id="right">
    sad :
