Added footer plus buttons

--- a/weather_index.html
+++ b/weather_index.html
@@ -10,7 +10,7 @@
 <div id="belsoapp" class="row">
 <h2 id="city"></h2>
 <div id="left">
-<span><i class="wi wi-thermometer"></i></span> C : <span id="temp"></span><br>
+<span><i class="wi wi-thermometer"></i></span> Temperature : <span id="temp"></span><br>
 <span id="windSpeedSpan"></span> Wind Speed : <span id="windSpeed"></span><br>
 <span id="windDegreeSpan"></span> Wind Degree : <span id="windDegree"></span><br>
 <span><i class="wi wi-day-cloudy"></i></span> Clouds : <span id="clouds"></span><br>
@@ -20,8 +20,13 @@
  </div>
 <br>
 </div>
-<div id="buttons">
-<button id="submit" class="btn btn-warning btn-default btn-sm"><span class="glyphicon glyphicon-send"></span> Submit</button>
+<div id="buttons" class="btn-group">
+<button id="submit" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-send"></span> Celsius</button>
+<button id="submit1" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-send"></span>Fahrenheit</button>
 </div>
+</div>
+<div id="footer">
+  <span id="github">Check this project on <a href="#">GitHub</a>!</span>
+  <span id="codedby">Coded by Laszlo Bucsak @ 2017.</span>
 </div>
 </body>
