--- a/weather_index.html
+++ b/weather_index.html
@@ -1,4 +1,4 @@
-<meta charset="UTF-8"> 
+<meta charset="UTF-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="weather_js.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -38,7 +38,7 @@
    <table>
      <tr>
        <td align="right" class="icons"><span><i class="wi wi-day-cloudy"></i></span></td>
-       <td> Weather : </td>
+       <td> Pressure : </td>
        <td><span id="weatherone"></span></td>
      </tr>
      <tr>
@@ -66,7 +66,7 @@
 </div>
 </div>
 <div id="footer">
-  <span id="github">Check this project on <a href="#">GitHub</a>!</span>
+  <span id="github">Check this project on <a href="https://github.com/BucSy/weather_app_js">GitHub</a>!</span>
   <span id="codedby">Coded by Laszlo Bucsak @ 2017.</span>
 </div>
 </body>
